; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_chunklist_sum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_chunklist_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_chunk = type { i64, %struct.auth_chunk* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.auth_chunk*)* @chunklist_sum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @chunklist_sum(%struct.auth_chunk* %0) #0 {
  %2 = alloca %struct.auth_chunk*, align 8
  %3 = alloca %struct.auth_chunk*, align 8
  %4 = alloca i64, align 8
  store %struct.auth_chunk* %0, %struct.auth_chunk** %2, align 8
  store i64 0, i64* %4, align 8
  %5 = load %struct.auth_chunk*, %struct.auth_chunk** %2, align 8
  store %struct.auth_chunk* %5, %struct.auth_chunk** %3, align 8
  br label %6

6:                                                ; preds = %15, %1
  %7 = load %struct.auth_chunk*, %struct.auth_chunk** %3, align 8
  %8 = icmp ne %struct.auth_chunk* %7, null
  br i1 %8, label %9, label %19

9:                                                ; preds = %6
  %10 = load %struct.auth_chunk*, %struct.auth_chunk** %3, align 8
  %11 = getelementptr inbounds %struct.auth_chunk, %struct.auth_chunk* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = add i64 %13, %12
  store i64 %14, i64* %4, align 8
  br label %15

15:                                               ; preds = %9
  %16 = load %struct.auth_chunk*, %struct.auth_chunk** %3, align 8
  %17 = getelementptr inbounds %struct.auth_chunk, %struct.auth_chunk* %16, i32 0, i32 1
  %18 = load %struct.auth_chunk*, %struct.auth_chunk** %17, align 8
  store %struct.auth_chunk* %18, %struct.auth_chunk** %3, align 8
  br label %6

19:                                               ; preds = %6
  %20 = load i64, i64* %4, align 8
  ret i64 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
